# aie_study

./: .gitignore  README.md  pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW02/figures/: README.md
homeworks/HW04/eda-cli/: README.md
homeworks/HW04/eda-cli/reports_example/: report.md
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
project/: .dockerignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  self-checklist.md
project/artifacts/: README.md
project/artifacts/modeling/models/: metadata.json  scorer_pipeline_v1.0.joblib
project/configs/: README.md
project/data/: README.md
project/notebooks/: 01_eda_baseline.ipynb  02_model_tuning.ipynb  README.md
project/src/: README.md
project/src/credit_scoring/: __init__.py  api.py  model.py  schemas.py
project/tests/: README.md  conftest.py  test_api.py
(+3 files in other folders)
