[project]
name = "aie-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jason>=0.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.1.6",
    "matplotlib>=3.10.8",
    "notebook>=7.1.3",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
