[project]
name = "aie-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.1.6",
    "matplotlib>=3.8.0",
    "notebook>=7.1.3",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
