[project]
name = "aie-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "datasets==2.19.0",        # ← точная версия, не диапазон!
    "pyarrow==16.1.0",         # ← последняя версия с PyExtensionType
    "transformers==4.41.2",    # ← совместима с datasets 2.19
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "pandas>=2.2.0",
    "numpy==1.26.4",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.1.6",
    "notebook>=7.1.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.uv]
index-strategy = "unsafe-best-match"